--- a/autoware_utils/package.xml
+++ b/autoware_utils/package.xml
@@ -4,6 +4,7 @@
   <name>autoware_utils</name>
   <version>1.0.0</version>
   <description>The autoware_utils package</description>
+  <maintainer email="egon.kang@autocore.ai">Ryohsuke Mitsudome</maintainer>
   <maintainer email="ryohsuke.mitsudome@tier4.jp">Ryohsuke Mitsudome</maintainer>
   <maintainer email="esteve.fernandez@tier4.jp">Esteve Fernandez</maintainer>
   <maintainer email="yutaka.kondo@tier4.jp">Yutaka Kondo</maintainer>
