--- a/autoware_utils/CMakeLists.txt
+++ b/autoware_utils/CMakeLists.txt
@@ -4,7 +4,7 @@ project(autoware_utils)
 find_package(autoware_cmake REQUIRED)
 autoware_package()
 
-file(GLOB_RECURSE src_cpps
+file(GLOB_RECURSE src_files 
     src/*.cpp
     src/geometry/*.cpp
     src/math/*.cpp
@@ -13,7 +13,7 @@ file(GLOB_RECURSE src_cpps
 )
 
 ament_auto_add_library(autoware_utils SHARED
-  ${src_cpps}
+  ${src_files}
 )
 
 if(BUILD_TESTING)
