--- a/autoware_utils/package.xml
+++ b/autoware_utils/package.xml
@@ -19,6 +19,7 @@
   <depend>autoware_internal_planning_msgs</depend>
   <depend>autoware_perception_msgs</depend>
   <depend>autoware_planning_msgs</depend>
+  <depend>autoware_utils_pcl</depend>
   <depend>autoware_utils_tf2</depend>
   <depend>autoware_vehicle_msgs</depend>
   <depend>builtin_interfaces</depend>
