--- a/autoware_utils_math/CMakeLists.txt
+++ b/autoware_utils_math/CMakeLists.txt
@@ -10,6 +10,8 @@ ament_auto_add_library(${PROJECT_NAME} SHARED
 )
 
 if(BUILD_TESTING)
+  file(GLOB_RECURSE test_files test/**/*.cpp)
+  ament_auto_add_gtest(test_${PROJECT_NAME} ${test_files})
 endif()
 
 ament_auto_package()
