--- a/autoware_utils/package.xml
+++ b/autoware_utils/package.xml
@@ -21,6 +21,7 @@
   <depend>autoware_planning_msgs</depend>
   <depend>autoware_utils_geometry</depend>
   <depend>autoware_utils_pcl</depend>
+  <depend>autoware_utils_uuid</depend>
   <depend>autoware_vehicle_msgs</depend>
   <depend>builtin_interfaces</depend>
   <depend>diagnostic_msgs</depend>
