--- a/autoware_utils_testing/package.xml
+++ b/autoware_utils_testing/package.xml
@@ -13,8 +13,10 @@
   <depend>gtest_vendor</depend>
   <depend>rclcpp</depend>
 
+  <test_depend>ament_cmake_ros</test_depend>
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>autoware_lint_common</test_depend>
+  <test_depend>std_msgs</test_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
