--- a/autoware_utils/package.xml
+++ b/autoware_utils/package.xml
@@ -19,6 +19,7 @@
   <depend>autoware_internal_planning_msgs</depend>
   <depend>autoware_perception_msgs</depend>
   <depend>autoware_planning_msgs</depend>
+  <depend>autoware_utils_debug</depend>
   <depend>autoware_utils_geometry</depend>
   <depend>autoware_utils_logging</depend>
   <depend>autoware_utils_math</depend>
