--- a/autoware_utils/package.xml
+++ b/autoware_utils/package.xml
@@ -21,6 +21,7 @@
   <depend>autoware_planning_msgs</depend>
   <depend>autoware_utils_debug</depend>
   <depend>autoware_utils_diagnostics</depend>
+  <depend>autoware_utils_geometry</depend>
   <depend>autoware_utils_logging</depend>
   <depend>autoware_utils_math</depend>
   <depend>autoware_utils_pcl</depend>
