--- a/autoware_utils_geometry/CMakeLists.txt
+++ b/autoware_utils_geometry/CMakeLists.txt
@@ -18,7 +18,17 @@ ament_auto_add_library(${PROJECT_NAME} SHARED
 )
 
 if(BUILD_TESTING)
-  file(GLOB_RECURSE test_files test/*.cpp)
+#   file(GLOB_RECURSE test_files test/*.cpp)
+#   file(GLOB_RECURSE test_files test/cases/alt_geometry.cpp)
+  file(GLOB_RECURSE test_files 
+    # test/cases/alt_geometry.cpp
+    # test/cases/boost_geometry.cpp
+    test/cases/boost_polygon_utils.cpp
+    test/cases/pose_deviation.cpp
+    test/cases/path_with_lane_id_geometry.cpp
+    test/cases/geometry.cpp
+    )
+
   ament_auto_add_gtest(test_${PROJECT_NAME} ${test_files})
 endif()
 
