--- a/autoware_utils_debug/package.xml
+++ b/autoware_utils_debug/package.xml
@@ -18,6 +18,7 @@
   <depend>autoware_internal_msgs</depend>
   <depend>autoware_utils_system</depend>
   <depend>diagnostic_msgs</depend>
+  <depend>fmt</depend>
   <depend>rclcpp</depend>
 
   <test_depend>ament_cmake_ros</test_depend>
