--- a/autoware_utils_math/CMakeLists.txt
+++ b/autoware_utils_math/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.14)
 project(autoware_utils_math)
 
 find_package(autoware_cmake REQUIRED)
+find_package(digestible REQUIRED)
 autoware_package()
 
 ament_auto_add_library(${PROJECT_NAME} SHARED
